# veng

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONSUMING.md  LICENSE  README.md  design.md  feedback.md  findings.md  fix_and_format.sh  flake.nix  progress.md  review.md  run_test.sh  vcpkg.json
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.cpp  googlebench.md
cmake/: CompilerSettings.cmake  Docs.cmake  TargetHelpers.cmake  vengConfig.cmake.in
docs/: .gitignore  Doxyfile.in
example/: CMakeLists.txt
example/common/: AppLoop.cpp  AppLoop.hpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  OrbitCamera.hpp  Window.cpp  Window.hpp
example/gltf_lod/: CMakeLists.txt  main.cpp
example/gltf_viewer/: CMakeLists.txt  main.cpp
example/instanced_cubes/: CMakeLists.txt  main.cpp
example/pbr_materials/: CMakeLists.txt  main.cpp
example/phong_materials/: CMakeLists.txt  main.cpp
example/picking_outline/: CMakeLists.txt  main.cpp
example/rhi_triangle/: CMakeLists.txt  main.cpp
example/static_shapes/: CMakeLists.txt  main.cpp
example/stl_viewer/: CMakeLists.txt  main.cpp  pack_mr.py  steel.cmake
example/stl_viewer/resources/: screw.stl
include/veng/: Modules.hpp  common.hpp  veng.hpp
include/veng/assets/: GltfLoader.hpp  Lod.hpp  MeshData.hpp  ObjLoader.hpp  PlyLoader.hpp  StlLoader.hpp  Texture.hpp  ThreemfLoader.hpp
include/veng/context/: Context.hpp  ContextErrors.hpp
include/veng/culling/: Clusters.hpp
include/veng/descriptors/: DescriptorAllocator.hpp
include/veng/gpu/: BufferRef.hpp  GpuExecContext.hpp  GpuNode.hpp  HostBlit.hpp  ImageRef.hpp  MeshRef.hpp  Sink.hpp  SubmitContext.hpp  UniformRef.hpp  VersionedOutput.hpp  Vertex.hpp
include/veng/logging/: Logger.hpp
include/veng/managers/: CommandManager.hpp  FrameExecutor.hpp  HeadlessExecutor.hpp  QueueKind.hpp  SwapchainManager.hpp  SyncManager.hpp
include/veng/nodes/: BlitNode.hpp  CoverageLodNode.hpp  DynamicMeshNode.hpp  GraphicsNode.hpp  MeshNode.hpp  MeshSelectorNode.hpp  PresentNode.hpp  RasterCubeNode.hpp  RasterTriangleNode.hpp  ScreenshotNode.hpp  StorageBufferNode.hpp  UniformNode.hpp
include/veng/passes/: ClusteredLights.hpp  OutlinePass.hpp  PbrPass.hpp  PhongPass.hpp  PickingPass.hpp
include/veng/pipelines/: ComputePipeline.hpp  GraphicsPipeline.hpp  PipelineError.hpp
include/veng/rendergraph/: Graph.hpp  RenderGraphCommon.hpp  Resolve.hpp  ThreadPoolScheduler.hpp
include/veng/resources/: Buffer.hpp  Image.hpp  RenderTargetSet.hpp  ResourcePool.hpp  SamplerConfig.hpp  SamplerConvert.hpp
include/veng/rhi/: BindGroup.hpp  CommandEncoder.hpp  Convert.hpp  Device.hpp  Enums.hpp  Error.hpp  Handles.hpp  SamplerDesc.hpp  Swapchain.hpp
include/veng/shader/: Shader.hpp
logs/: logs.txt
playground/: CMakeLists.txt  OutlinePass.cpp  OutlinePass.hpp  Window.cpp  Window.hpp  main.cpp  test.cpp
shaders/demo/: blur_h.frag.slang  composite.frag.slang  cube.frag.slang  cube.vert.slang  debug_line.frag.slang  debug_line.vert.slang  fullscreen.vert.slang  lit.frag.slang  lit_basic.vert.slang  lit_directional.frag.slang  lit_instanced.vert.slang  mesh.vert.slang  phong.frag.slang  phong.vert.slang  ring.frag.slang  silhouette.frag.slang
shaders/passes/: fullscreen.vert.slang  outline_blur.frag.slang  outline_fullscreen.vert.slang  outline_ring.frag.slang  outline_silhouette.frag.slang  outline_silhouette.vert.slang  pbr.frag.slang  pbr.vert.slang  phong.frag.slang  phong.vert.slang  picking.frag.slang  picking.vert.slang  tonemap.frag.slang
shaders/tests/slice/: instanced.vert.slang  mesh_triangle.frag.slang  mesh_triangle.vert.slang  sample.frag.slang  (+4 more)
src/: CMakeLists.txt
src/assets/: GltfLoader.cpp  MeshData.cpp  MeshProcessing.cpp  MeshProcessing.hpp  ObjLoader.cpp  PlyLoader.cpp  StbImpl.cpp  StlLoader.cpp  Texture.cpp  ThreemfLoader.cpp
src/context/: Context.cpp  VmaImpl.cpp
src/culling/: Clusters.cpp
src/descriptors/: DescriptorAllocator.cpp
src/managers/: CommandManager.cpp  FrameExecutor.cpp  HeadlessExecutor.cpp  SwapchainManager.cpp  SyncManager.cpp
src/nodes/: BlitNode.cpp  CoverageLodNode.cpp  DynamicMeshNode.cpp  GraphicsNode.cpp  MeshNode.cpp  MeshSelectorNode.cpp  PresentNode.cpp  RasterCubeNode.cpp  RasterTriangleNode.cpp  ScreenshotNode.cpp  StbWriteImpl.cpp  StorageBufferNode.cpp  UniformNode.cpp
src/passes/: ClusteredLights.cpp  OutlinePass.cpp  PbrPass.cpp  PhongPass.cpp  PickingPass.cpp
src/pipelines/: ComputePipeline.cpp  GraphicsPipeline.cpp
src/rendergraph/: Graph.cpp  ThreadPoolScheduler.cpp
src/rendergraph/data/: Data.cpp
src/rendergraph/nodes/: ComputeNode.cpp  Node.cpp
src/resources/: Buffer.cpp  Image.cpp  RenderTargetSet.cpp  ResourcePool.cpp
src/rhi/: Device.cpp  Swapchain.cpp
src/shader/: Shader.cpp
tests/: CMakeLists.txt  TestTypes.hpp  UmbrellaTests.cpp  example_test.cpp
tests/assets/: GltfLoaderTests.cpp  MeshProcessingTests.cpp  ObjLoaderTests.cpp  PlyLoaderTests.cpp  StlLoaderTests.cpp  TextureTests.cpp  ThreemfLoaderTests.cpp  models.cmake
tests/context/: VulkanContextTests.cpp
tests/culling/: ClusterTests.cpp
tests/descriptors/: DescriptorAllocatorTests.cpp
tests/gpu/: GpuBridgeTests.cpp
tests/managers/: FrameExecutorTests.cpp  ManagerTests.cpp  SwapchainTests.cpp
tests/nodes/: DebugLineTests.cpp  DynamicMeshTests.cpp  GraphicsNodeTests.cpp  InstancedDrawTests.cpp  LodNodesTests.cpp  MeshNodeTests.cpp  MeshStrideTests.cpp  MultiDrawTests.cpp  NBufferingTests.cpp  PhongPassTests.cpp  RasterCubeTests.cpp  RasterTriangleTests.cpp  SampledImageTests.cpp  ScreenshotNodeTests.cpp  SliceDriverTests.cpp  StorageBufferNodeTests.cpp  UniformNodeTests.cpp
tests/passes/: PbrPassTests.cpp  PickingOutlineTests.cpp
tests/pipelines/: ComputePipelineTests.cpp  GraphicsPipelineTests.cpp
tests/rendergraph/: GraphTests.cpp  SchedulerTests.cpp  TemporalTests.cpp
tests/resources/: RenderTargetSetTests.cpp  ResourcePoolTests.cpp  ResourceTests.cpp
tests/shader/: ShaderLoadingTests.cpp  ShaderValidationTests.cpp
tests/support/: Headless.hpp  VkFault.hpp
(+29 files in other folders)
